<resources>
    <string name="app_name">Fincent</string>

    <string name="btn_confirm">확인</string>

    <!--설정-->
    <string name="setting_title">설정</string>
    <string name="setting_alarm_title">알림 수신</string>
    <string name="setting_alarm_comp">관심기업 알림</string>
    <string name="setting_alarm_comp_desc">관심기업의 변동정보를 알려드립니다.</string>
    <string name="setting_alarm_app">앱 알림</string>
    <string name="setting_alarm_app_desc">실시간 처리결과를 알려드립니다.</string>
    <string name="setting_alarm_notice">서비스 공지</string>
    <string name="setting_alarm_notice_desc">이벤트, 투자/대출 뉴스, 쿠폰 정보를 알려드립니다.</string>

    <string name="setting_login_title">간편 로그인 설정</string>
    <string name="setting_login_number">간편번호</string>
    <string name="setting_login_finger">지문설정</string>
    <string name="setting_certificate">공인인증서 관리</string>
    <string name="setting_authority">권한설정</string>
    <string name="setting_version">버전</string>

    <string name="cert_title">전자서명 공인인증</string>
    <string name="cert_issue"><![CDATA[발급자 : ]]></string>
    <string name="cert_expire_date"><![CDATA[만료일 : ]]></string>
    <string name="cert_del_btn">삭제</string>
    <string name="cert_copy_btn">인증서 가져오기</string>
    <string name="cert_empty_title">등록된 공인인증서가 없습니다.</string>
    <string name="cert_empty_desc">다른 기기에 저장된 공인인증서를 가져오거나, 인증서를 발급하여 이용할 수 있습니다.</string>

    <string name="cert_copy_title">PC → 휴대폰 인증서 복사</string>
    <string name="cert_copy_cert_num">인증번호</string>
    <string name="cert_copy_guide_title">공인인증서 가져오기 안내</string>
    <string name="cert_copy_guide_step1">PC Fincent 홈페이지 고객센터 메뉴에서 스마트폰 공인인증서 복사 클릭</string>
    <string name="cert_copy_guide_step2">공인인증서 비밀번호 입력 > 스마트폰에 표기된 12자리 승인번호 입력 > 마침 클릭</string>
    <string name="cert_copy_guide_step3">전송완료 메시지 확인 후 완료</string>

    <string name="simple_pass_title">간편번호 등록</string>
    <string name="simple_pass_guide">간편 비밀번호 숫자 6자리를 입력해 주세요.</string>
    <string name="simple_pass_desc">생년월일, 휴대폰번호, 3자리이상 연속되거나 동일한 숫자는 설정할 수 없습니다.</string>

    <string name="reg_fingerprint_title">지문</string>
    <string name="reg_fingerprint_guide">지문센서에 손가락을 올려주세요.</string>

    <string name="dialog_confirm_btn">확인</string>
    <string name="dialog_cancel_btn">취소</string>
    <string name="dialog_set_simple_pass">간편번호를 설정 하시겠습니까?</string>
    <string name="dialog_cancel_simple_pass">간편번호 설정을 해지 하시겠습니까?</string>
    <string name="dialog_seted_simple_pass">간편번호를 설정 되었습니다</string>
    <string name="dialog_canceled_simple_pass">간편번호 설정이 해지 되었습니다</string>

    <string name="dialog_set_fingerprint">지문을 설정 하시겠습니까?</string>
    <string name="dialog_seted_fingerprint">지문 설정이 완료 되었습니다</string>
    <string name="dialog_cancel_fingerprint">지문 설정을 해지 하시겠습니까?</string>
    <string name="dialog_canceled_fingerprint">지문 설정이 해지 되었습니다</string>

    <string name="login_select_quide">로그인 방식을 선택하세요.</string>
</resources>
